--- a/categorias/aneis.html
+++ b/categorias/aneis.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style_categorias.css" />
+
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="../css/style_categorias.css"/>
+    <link rel="stylesheet" href="../css/style_menu_categorias.css"/>
+    <link rel="stylesheet" href="../css/style_rodape.css"/>
+
     <title>Aneis</title>
 </head>
 <body>
@@ -23,6 +27,14 @@
                 <li><a href="brincos.html">Brincos</a></li>
                 <li><a href="colares.html">Colares</a></li>
                 <li><a href="pulseiras.html">Pulseiras</a></li>
+                <li>
+                    <a class="login" href="../autenticacao/autenticacao.html">
+                        <span>
+                            <img class="icons-img" src="../images/login.png" alt="login">
+                            Login
+                        </span>
+                    </a>
+                </li>
                 <li>
                     <a class="carrinho" href="#">
                         <span>
@@ -68,7 +80,7 @@
                 <a href="#">
                     <img class="center-img" src="../images/produtos/aneis/3.jpg" alt="Anel de Galhos banhada a ouro">
                 </a>
-                <figcaption>Anel de Galhos banhada a ouro<br>R$ 35,99</figcaption>
+                <figcaption>Anel de Galhos Banhada a Ouro<br>R$ 35,99</figcaption>
             </figure> 
         </section>
     </article>
@@ -97,7 +109,7 @@
                 <a href="#">
                     <img class="center-img" src="../images/produtos/aneis/6.jpg" alt="Anel Fases da Lua banhado">
                 </a>
-                <figcaption>Anel Fases da Lua banhado<br>R$ 17,99</figcaption>
+                <figcaption>Anel Fases da Lua Banhado<br>R$ 17,99</figcaption>
             </figure> 
         </section>
     </article>
@@ -121,7 +133,7 @@
             </div>
 
             <div>
-               <h3 class="garantia-text">
+               <h3>
                     Nossa loja assegura que seu produto seja entregue conforme
                     as especificações de compra. Caso não seja cumprido o acordo,
                     a garantia da loja será acionada.
@@ -137,7 +149,7 @@
     <footer>           
         <figure>
             <a href="../index.html"><img class="logo" src="../images/logo-bijuWH.png" alt="logo"></a>
-            <h3 class="footer-text">Rua das portas, 1040 <br/> Centro - Pirapora</h3>
+            <address class="footer-text">Rua das portas, 1040 <br/> Centro - Pirapora</address>
         </figure>
 
         <div class="box"></div><div class="box linha-vertical"></div>
@@ -152,7 +164,8 @@
             </figure>
 
             <p class="footer-text-contato">Dê-nos o seu feedback.</p>
-            <a href="../contato/form.html" class="footer-text-contato-2"><p class="footer-text-contato-2">Fale conosco</p></a>
+
+            <a class="footer-text-contato-2" href="../contato/form.html"><p class="footer-text-contato-2">Fale conosco</p></a>
 
             <div class="social-div">
                 <a class="social-link" href="http://www.facebook.com" target="_blank"><img class="social-img" src="../images/facebook-logo.png" alt="facebook"></a>
