--- a/categorias/colares.html
+++ b/categorias/colares.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style_categorias.css" />
+
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="../css/style_categorias.css"/>
+    <link rel="stylesheet" href="../css/style_menu_categorias.css"/>
+    <link rel="stylesheet" href="../css/style_rodape.css"/>
+
     <title>Colares</title>
 </head>
 <body>
@@ -23,6 +27,14 @@
                 <li><a href="brincos.html">Brincos</a></li>
                 <li><a href="colares.html">Colares</a></li>
                 <li><a href="pulseiras.html">Pulseiras</a></li>
+                <li>
+                    <a class="login" href="../autenticacao/autenticacao.html">
+                        <span>
+                            <img class="icons-img" src="../images/login.png" alt="login">
+                            Login
+                        </span>
+                    </a>
+                </li>
                 <li>
                     <a class="carrinho" href="#">
                         <span>
@@ -137,7 +149,7 @@
     <footer>           
         <figure>
             <a href="../index.html"><img class="logo" src="../images/logo-bijuWH.png" alt="logo"></a>
-            <h3 class="footer-text">Rua das portas, 1040 <br/> Centro - Pirapora</h3>
+            <address class="footer-text">Rua das portas, 1040 <br/> Centro - Pirapora</address>
         </figure>
 
         <div class="box"></div><div class="box linha-vertical"></div>
@@ -152,7 +164,8 @@
             </figure>
 
             <p class="footer-text-contato">Dê-nos o seu feedback.</p>
-            <a href="../contato/form.html" class="footer-text-contato-2"><p class="footer-text-contato-2">Fale conosco</p></a>
+
+            <a class="footer-text-contato-2" href="../contato/form.html"><p class="footer-text-contato-2">Fale conosco</p></a>
 
             <div class="social-div">
                 <a class="social-link" href="http://www.facebook.com" target="_blank"><img class="social-img" src="../images/facebook-logo.png" alt="facebook"></a>
