--- a/contato/mensagem.html
+++ b/contato/mensagem.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css" />
-    <title>Biju WH</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="../css/style_mensagem.css"/>
+    <link rel="stylesheet" href="../css/style_menu.css"/>
+
+    <title>Mensagem</title>
 </head>
 <body>
     <header>
@@ -24,6 +27,14 @@
                 <li><a href="../categorias/colares.html">Colares</a></li>
                 <li><a href="../categorias/pulseiras.html">Pulseiras</a></li>
                 <li>
+                    <a class="login" href="../autenticacao/autenticacao.html">
+                        <span>
+                            <img class="icons-img" src="../images/login.png" alt="login">
+                            Login
+                        </span>
+                    </a>
+                </li>
+                <li>
                     <a class="carrinho" href="#">
                         <span>
                             <img class="icons-img" src="../images/carrinho-logo.png" alt="carrinho"> 
@@ -37,8 +48,8 @@
 
     <article>
         <section class="frase-principal">
-            <h1>Email cadastrado com sucesso!</h1>
-            <hr>
+            <h1>Dados enviados com sucesso!</h1>
+            <hr class="hr">
         </section>   
     </article>
 </body>
