--- a/autenticacao/autenticacao.html
+++ b/autenticacao/autenticacao.html
@@ -64,7 +64,7 @@
                     <input type="email" name="email" id="email">
 
                     <label for="password">Senha</label>
-                    <input type="password" name="password" id="pass">
+                    <input type="password" name="password" id="password">
 
                     <input type="submit" value="Login">
                 </form>
@@ -75,14 +75,14 @@
                 <h3>Faça agora mesmo o seu cadastro!</h3>
 
                 <form class="form" action="../index.html" method="POST">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email">
+                    <label for="email1">Email</label>
+                    <input type="email" name="email1" id="email1">
                     
-                    <label for="password">Senha</label>
-                    <input type="password" name="password" id="pass">
+                    <label for="password2">Senha</label>
+                    <input type="password" name="password2" id="password2">
                     
-                    <label for="password">Confirme sua senha</label>
-                    <input type="password" name="password" id="pass">
+                    <label for="password3">Confirme sua senha</label>
+                    <input type="password" name="password3" id="password3">
 
                     <label for="cpf">CPF</label>
                     <input type="text" name="cpf" id="cpf">
