--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <article class="flex">
         <figure>
-            <img class="banner" src="images/banner.png" alt="banner">
+            <img class="banner" src="images/bannercolor.png" alt="banner">
         </figure>            
     </article>
 
