--- a/produtos/produto_3.html
+++ b/produtos/produto_3.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<html>
 <head>
     <meta charset="UTF-8">
 
@@ -62,7 +61,7 @@
                 <h1>Pulseira Aberta</h1>
                 <h3>Pulseira metálica aberta.</h3>
 
-                <form class="form" action="" method="post">
+                <form class="form" action="#" method="post">
                     <select name="tamanho" id="tamanho">
                         <option value="" disabled selected>Escolha o tamanho</option>
                         <option value="14">14</option>
