--- a/autenticacao/autenticacao.html
+++ b/autenticacao/autenticacao.html
@@ -90,7 +90,7 @@
                     <label for="cep">CEP</label>
                     <input type="text" name="cep" id="cep">
 
-                    <input type="submit" value="Cadastrar">
+                    <input type="submit" value="Cadastrar" onclick="alert('Cadastro realizado com sucesso!')">
                 </form>
             </div>
         </section>
