--- a/produtos/produto_3.html
+++ b/produtos/produto_3.html
@@ -73,7 +73,7 @@
 
                     <input type="number" name="quantidade" id="quantidade" placeholder="1">
 
-                    <input type="submit" value="Coloque no carrinho">
+                    <input type="submit" value="Coloque no carrinho" onclick="alert('Produto adicionado ao carrinho!')">
                 </form>
 
                 <div class="feedback">
